--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -4,16 +4,20 @@ parameters:
 
 services:
 
-  culturefeed_udb3.cache:
+  culturefeed_udb3.eventld_cache:
     class: Drupal\Core\Cache\CacheBackendInterface
     tags:
       - { name: cache.bin }
     factory_method: get
     factory_service: cache_factory
-    arguments: [culturefeed_udb3]
+    arguments: [culturefeed_udb3_eventld]
   culturefeed_udb3.iri_generator:
     class: Drupal\culturefeed_udb3\IriGenerator
     arguments: ['@url_generator']
+  culturefeed_udb3.serialize:
+    class: Broadway\Serializer\SimpleInterfaceSerializer
+  culturefeed_udb3.execution_context_metadata_enricher:
+    class: CultuurNet\UDB3\EventSourcing\ExecutionContextMetadataEnricher
   culturefeed_udb3.search_api_2.factory:
     class: Drupal\culturefeed_udb3\SearchApi2Factory
     arguments: ['@config.factory']
@@ -21,19 +25,17 @@ services:
     class: CultuurNet\UDB3\SearchAPI2\DefaultSearchService
     factory_service: culturefeed_udb3.search_api_2.factory
     factory_method: create
-  culturefeed_udb3.search:
+  culturefeed_udb3.search_service:
     class: CultuurNet\UDB3\Search\PullParsingSearchService
     arguments: ['@culturefeed_udb3.search_api_2', '@culturefeed_udb3.iri_generator']
-  culturefeed_udb3.serialize:
-    class: Broadway\Serializer\SimpleInterfaceSerializer
-  culturefeed_udb3.execution_context_metadata_enricher:
-    class: CultuurNet\UDB3\EventSourcing\ExecutionContextMetadataEnricher
+
   culturefeed_udb3.eventld_repository:
     class: Drupal\culturefeed_udb3\EventldRepository
-    arguments: ['@culturefeed_udb3.cache']
+    arguments: ['@culturefeed_udb3.eventld_cache']
   culturefeed_udb3.eventld_projector:
     class: CultuurNet\UDB3\Event\EventLDProjector
     arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator']
+
   culturefeed_udb3.main_command_bus:
     class: CultuurNet\UDB3\CommandHandling\SimpleContextAwareCommandBus
   culturefeed_udb3.event_bus:
@@ -55,12 +57,12 @@ services:
     class: CultuurNet\UDB3\UDB2\EntryAPIFactory
     factory_service: culturefeed_udb3.udb2_entry_api.factory
     factory_method: get
-  culturefeed_udb3.udb2_entry_api_improved.factory:
+  culturefeed_udb3.udb2_entry_api_improved_factory:
     class: Drupal\culturefeed_udb3\UDB2EntryApiImprovedFactory
     arguments: ['@config.factory', '@culturefeed.consumer_credentials']
   culturefeed_udb3.udb2_entry_api_improved:
     class: CultuurNet\UDB3\UDB2\EntryAPIImprovedFactory
-    factory_service: culturefeed_udb3.udb2_entry_api_improved.factory
+    factory_service: culturefeed_udb3.udb2_entry_api_improved_factory
     factory_method: get
   culturefeed_udb3.event_store:
     class: Drupal\culturefeed_udb3\EventStore
@@ -70,14 +72,14 @@ services:
     arguments: ['@culturefeed_udb3.event_store', '@culturefeed_udb3.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
   culturefeed_udb3.event_repository.factory:
     class: Drupal\culturefeed_udb3\EventRepositoryFactory
-    arguments: ['@culturefeed_udb3.local_event_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
+    arguments: ['@culturefeed_udb3.local_event_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
   culturefeed_udb3.event_repository:
     class: CultuurNet\UDB3\UDB2\EventRepository
     factory_service: culturefeed_udb3.event_repository.factory
     factory_method: get
   culturefeed_udb3.event_command_handler:
     class: CultuurNet\UDB3\Event\EventCommandHandler
-    arguments: ['@culturefeed_udb3.event_repository', '@culturefeed_udb3.search']
+    arguments: ['@culturefeed_udb3.event_repository', '@culturefeed_udb3.search_service']
   culturefeed_udb3.logger.command_bus.factory:
     class: Drupal\culturefeed_udb3\LoggerCommandBusFactory
     arguments: ['@config.factory', '@logger.channel.culturefeed']
@@ -92,22 +94,16 @@ services:
       - [setLogger, ['@culturefeed_udb3.logger.command_bus']]
       - [subscribe, ['@culturefeed_udb3.event_command_handler']]
 
-  culturefeed_udb3.event.real:
-    class: CultuurNet\UDB3\DefaultEventService
-    arguments: ['@culturefeed_udb3.search_api_2', '@culturefeed_udb3.iri_generator']
-  culturefeed_udb3.event:
-    class: Drupal\culturefeed_udb3\EventServiceCache
-    arguments: ['@culturefeed_udb3.event.real', '@culturefeed_udb3.event.cache']
-  culturefeed_udb3.event.cache:
-    class: Drupal\Core\Cache\CacheBackendInterface
-    tags:
-      - { name: cache.bin }
-    factory_service: cache_factory
-    factory_method: get
-    arguments: [culturefeed_udb3_event]
+  culturefeed_udb3.event.service:
+    class: CultuurNet\UDB3\LocalEventService
+    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.event_repository', '@culturefeed_udb3.iri_generator']
   culturefeed_udb3.event.tagger:
     class: CultuurNet\UDB3\Event\DefaultEventTaggerService
-    arguments: ['@culturefeed_udb3.event', '@culturefeed_udb3.event_command_bus']
+    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
+  culturefeed_udb3.event.editor:
+    class: CultuurNet\UDB3\Event\DefaultEventEditingService
+    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
+
   culturefeed_udb3.used_keywords_memory_event_store:
     class: Drupal\culturefeed_udb3\EventStore
     arguments: ['used_keywords_memory_event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
