--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -4,18 +4,14 @@ parameters:
 
 services:
 
-  culturefeed_udb3.eventld_cache:
-    class: Drupal\Core\Cache\CacheBackendInterface
-    tags:
-      - { name: cache.bin }
-    factory_method: get
-    factory_service: cache_factory
-    arguments: [culturefeed_udb3_eventld]
+  # General
   culturefeed_udb3.iri_generator:
     class: Drupal\culturefeed_udb3\IriGenerator
     arguments: ['@url_generator']
   culturefeed_udb3.serialize:
     class: Broadway\Serializer\SimpleInterfaceSerializer
+  culturefeed_udb3.main_command_bus:
+    class: CultuurNet\UDB3\CommandHandling\SimpleContextAwareCommandBus
   culturefeed_udb3.execution_context_metadata_enricher:
     class: CultuurNet\UDB3\EventSourcing\ExecutionContextMetadataEnricher
   culturefeed_udb3.search_api_2.factory:
@@ -28,20 +24,6 @@ services:
   culturefeed_udb3.search_service:
     class: CultuurNet\UDB3\Search\PullParsingSearchService
     arguments: ['@culturefeed_udb3.search_api_2', '@culturefeed_udb3.iri_generator']
-
-  culturefeed_udb3.eventld_repository:
-    class: Drupal\culturefeed_udb3\EventldRepository
-    arguments: ['@culturefeed_udb3.eventld_cache']
-  culturefeed_udb3.eventld_projector:
-    class: CultuurNet\UDB3\Event\EventLDProjector
-    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator']
-
-  culturefeed_udb3.main_command_bus:
-    class: CultuurNet\UDB3\CommandHandling\SimpleContextAwareCommandBus
-  culturefeed_udb3.event_bus:
-    class: Broadway\EventHandling\SimpleEventBus
-    calls:
-      - [subscribe, ['@culturefeed_udb3.eventld_projector']]
   culturefeed_udb3.event_stream_metadata_enricher:
     class: Broadway\EventSourcing\MetadataEnrichment\MetadataEnrichingEventStreamDecorator
     calls:
@@ -64,6 +46,25 @@ services:
     class: CultuurNet\UDB3\UDB2\EntryAPIImprovedFactory
     factory_service: culturefeed_udb3.udb2_entry_api_improved_factory
     factory_method: get
+
+  # Event
+  culturefeed_udb3.eventld_cache:
+    class: Drupal\Core\Cache\CacheBackendInterface
+    tags:
+      - { name: cache.bin }
+    factory_method: get
+    factory_service: cache_factory
+    arguments: [culturefeed_udb3_eventld]
+  culturefeed_udb3.eventld_repository:
+    class: Drupal\culturefeed_udb3\EventldRepository
+    arguments: ['@culturefeed_udb3.eventld_cache']
+  culturefeed_udb3.eventld_projector:
+    class: CultuurNet\UDB3\Event\EventLDProjector
+    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator']
+  culturefeed_udb3.event_bus:
+    class: Broadway\EventHandling\SimpleEventBus
+    calls:
+      - [subscribe, ['@culturefeed_udb3.eventld_projector']]
   culturefeed_udb3.event_store:
     class: Drupal\culturefeed_udb3\EventStore
     arguments: ['event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
@@ -115,44 +116,86 @@ services:
     arguments: ['@culturefeed_udb3.event.used_keywords_memory_repository']
 
   # Place
-  culturefeed_udb3.placeld_cache:
+  # Place: ld repository
+  culturefeed_udb3.place.ld_cache:
     class: Drupal\Core\Cache\CacheBackendInterface
     tags:
       - { name: cache.bin }
     factory_method: get
     factory_service: cache_factory
-    arguments: [culturefeed_udb3_placeld]
-  culturefeed_udb3.placeld_repository:
-    class: Drupal\culturefeed_udb3\PlaceldRepository
-    arguments: ['@culturefeed_udb3.placeld_cache']
-  culturefeed_udb3.place_store:
+    arguments: [culturefeed_udb3_place_ld]
+  culturefeed_udb3.place.ld_repository:
+    class: Drupal\culturefeed_udb3\EntityLdRepository
+    arguments: ['@culturefeed_udb3.place.ld_cache']
+  # Place: repository
+  culturefeed_udb3.place.store:
     class: Drupal\culturefeed_udb3\EventStore
     arguments: ['place_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
   culturefeed_udb3.place.iri_generator:
     class: Drupal\culturefeed_udb3\IriGenerator
     arguments: ['@url_generator', 'culturefeed_udb3.place']
-  culturefeed_udb3.placeld_projector:
+  culturefeed_udb3.place.ld_projector:
     class: CultuurNet\UDB3\Place\PlaceLDProjector
-    arguments: ['@culturefeed_udb3.placeld_repository', '@culturefeed_udb3.place.iri_generator']
+    arguments: ['@culturefeed_udb3.place.ld_repository', '@culturefeed_udb3.place.iri_generator']
   culturefeed_udb3.place.event_bus:
     class: Broadway\EventHandling\SimpleEventBus
     calls:
-      - [subscribe, ['@culturefeed_udb3.placeld_projector']]
-  culturefeed_udb3.local_place_repository:
+      - [subscribe, ['@culturefeed_udb3.place.ld_projector']]
+  culturefeed_udb3.place.local_repository:
     class: CultuurNet\UDB3\Place\PlaceRepository
-    arguments: ['@culturefeed_udb3.place_store', '@culturefeed_udb3.place.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
-  culturefeed_udb3.place_repository.factory:
+    arguments: ['@culturefeed_udb3.place.store', '@culturefeed_udb3.place.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
+  culturefeed_udb3.place.repository_factory:
     class: Drupal\culturefeed_udb3\PlaceRepositoryFactory
-    arguments: ['@culturefeed_udb3.local_place_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
-  culturefeed_udb3.place_repository:
+    arguments: ['@culturefeed_udb3.place.local_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
+  culturefeed_udb3.place.repository:
     class: CultuurNet\UDB3\UDB2\PlaceRepository
-    factory_service: culturefeed_udb3.place_repository.factory
+    factory_service: culturefeed_udb3.place.repository_factory
     factory_method: get
+  # Place: service
   culturefeed_udb3.place.service:
-    class: CultuurNet\UDB3\LocalPlaceService
-    arguments: ['@culturefeed_udb3.placeld_repository', '@culturefeed_udb3.place_repository']
+    class: CultuurNet\UDB3\LocalEntityService
+    arguments: ['@culturefeed_udb3.place.ld_repository', '@culturefeed_udb3.place.repository']
 
-
+  # Organizer
+  # Organizer: ld repository
+  culturefeed_udb3.organizer.ld_cache:
+    class: Drupal\Core\Cache\CacheBackendInterface
+    tags:
+      - { name: cache.bin }
+    factory_method: get
+    factory_service: cache_factory
+    arguments: [culturefeed_udb3_organizer_ld]
+  culturefeed_udb3.organizer.ld_repository:
+    class: Drupal\culturefeed_udb3\EntityLdRepository
+    arguments: ['@culturefeed_udb3.organizer.ld_cache']
+  # Organizer: repository
+  culturefeed_udb3.organizer.store:
+    class: Drupal\culturefeed_udb3\EventStore
+    arguments: ['organizer_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
+  culturefeed_udb3.organizer.iri_generator:
+    class: Drupal\culturefeed_udb3\IriGenerator
+    arguments: ['@url_generator', 'culturefeed_udb3.organizer']
+  culturefeed_udb3.organizer.ld_projector:
+    class: CultuurNet\UDB3\Organizer\OrganizerLDProjector
+    arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.iri_generator']
+  culturefeed_udb3.organizer.event_bus:
+    class: Broadway\EventHandling\SimpleEventBus
+    calls:
+      - [subscribe, ['@culturefeed_udb3.organizer.ld_projector']]
+  culturefeed_udb3.organizer.local_repository:
+    class: CultuurNet\UDB3\Organizer\OrganizerRepository
+    arguments: ['@culturefeed_udb3.organizer.store', '@culturefeed_udb3.organizer.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
+  culturefeed_udb3.organizer.repository_factory:
+    class: Drupal\culturefeed_udb3\OrganizerRepositoryFactory
+    arguments: ['@culturefeed_udb3.organizer.local_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
+  culturefeed_udb3.organizer.repository:
+    class: CultuurNet\UDB3\UDB2\OrganizerRepository
+    factory_service: culturefeed_udb3.organizer.repository_factory
+    factory_method: get
+  # Organizer: service
+  culturefeed_udb3.organizer.service:
+    class: CultuurNet\UDB3\LocalEntityService
+    arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.repository']
 
   culturefeed_udb3.json_ld_subscriber:
     class: Drupal\culturefeed_udb3\JsonLdSubscriber
