--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -47,74 +47,6 @@ services:
     factory_service: culturefeed_udb3.udb2_entry_api_improved_factory
     factory_method: get
 
-  # Event
-  culturefeed_udb3.eventld_cache:
-    class: Drupal\Core\Cache\CacheBackendInterface
-    tags:
-      - { name: cache.bin }
-    factory_method: get
-    factory_service: cache_factory
-    arguments: [culturefeed_udb3_eventld]
-  culturefeed_udb3.eventld_repository:
-    class: Drupal\culturefeed_udb3\EventldRepository
-    arguments: ['@culturefeed_udb3.eventld_cache']
-  culturefeed_udb3.eventld_projector:
-    class: CultuurNet\UDB3\Event\EventLDProjector
-    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator']
-  culturefeed_udb3.event_bus:
-    class: Broadway\EventHandling\SimpleEventBus
-    calls:
-      - [subscribe, ['@culturefeed_udb3.eventld_projector']]
-  culturefeed_udb3.event_store:
-    class: Drupal\culturefeed_udb3\EventStore
-    arguments: ['event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
-  culturefeed_udb3.local_event_repository:
-    class: CultuurNet\UDB3\Event\EventRepository
-    arguments: ['@culturefeed_udb3.event_store', '@culturefeed_udb3.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
-  culturefeed_udb3.event_repository.factory:
-    class: Drupal\culturefeed_udb3\EventRepositoryFactory
-    arguments: ['@culturefeed_udb3.local_event_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
-  culturefeed_udb3.event_repository:
-    class: CultuurNet\UDB3\UDB2\EventRepository
-    factory_service: culturefeed_udb3.event_repository.factory
-    factory_method: get
-  culturefeed_udb3.event_command_handler:
-    class: CultuurNet\UDB3\Event\EventCommandHandler
-    arguments: ['@culturefeed_udb3.event_repository', '@culturefeed_udb3.search_service']
-  culturefeed_udb3.logger.command_bus.factory:
-    class: Drupal\culturefeed_udb3\LoggerCommandBusFactory
-    arguments: ['@config.factory', '@logger.channel.culturefeed']
-  culturefeed_udb3.logger.command_bus:
-    class: Monolog\Logger
-    factory_service: culturefeed_udb3.logger.command_bus.factory
-    factory_method: get
-  culturefeed_udb3.event_command_bus:
-    class: CultuurNet\UDB3\CommandHandling\ResqueCommandBus
-    arguments: ['@culturefeed_udb3.main_command_bus', '%command_bus.parameter%', '@culturefeed_udb3.command_bus_event_dispatcher']
-    calls:
-      - [setLogger, ['@culturefeed_udb3.logger.command_bus']]
-      - [subscribe, ['@culturefeed_udb3.event_command_handler']]
-
-  culturefeed_udb3.event.service:
-    class: CultuurNet\UDB3\LocalEventService
-    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.event_repository']
-  culturefeed_udb3.event.tagger:
-    class: CultuurNet\UDB3\Event\DefaultEventTaggerService
-    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
-  culturefeed_udb3.event.editor:
-    class: CultuurNet\UDB3\Event\DefaultEventEditingService
-    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
-
-  culturefeed_udb3.used_keywords_memory_event_store:
-    class: Drupal\culturefeed_udb3\EventStore
-    arguments: ['used_keywords_memory_event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
-  culturefeed_udb3.event.used_keywords_memory_repository:
-    class: CultuurNet\UDB3\UsedKeywordsMemory\UsedKeywordsMemoryRepository
-    arguments: ['@culturefeed_udb3.used_keywords_memory_event_store', '@culturefeed_udb3.event_bus']
-  culturefeed_udb3.event.used_keywords_memory:
-    class: CultuurNet\UDB3\UsedKeywordsMemory\DefaultUsedKeywordsMemoryService
-    arguments: ['@culturefeed_udb3.event.used_keywords_memory_repository']
-
   # Place
   # Place: ld repository
   culturefeed_udb3.place.ld_cache:
@@ -196,6 +128,75 @@ services:
   culturefeed_udb3.organizer.service:
     class: CultuurNet\UDB3\LocalEntityService
     arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.repository']
+
+  # Event
+  culturefeed_udb3.eventld_cache:
+    class: Drupal\Core\Cache\CacheBackendInterface
+    tags:
+      - { name: cache.bin }
+    factory_method: get
+    factory_service: cache_factory
+    arguments: [culturefeed_udb3_eventld]
+  culturefeed_udb3.eventld_repository:
+    class: Drupal\culturefeed_udb3\EventldRepository
+    arguments: ['@culturefeed_udb3.eventld_cache']
+  culturefeed_udb3.eventld_projector:
+    class: CultuurNet\UDB3\Event\EventLDProjector
+    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator', '@culturefeed_udb3.place.ld_projector', '@culturefeed_udb3.organizer.ld_projector']
+  culturefeed_udb3.event_bus:
+    class: Broadway\EventHandling\SimpleEventBus
+    calls:
+      - [subscribe, ['@culturefeed_udb3.eventld_projector']]
+  culturefeed_udb3.event_store:
+    class: Drupal\culturefeed_udb3\EventStore
+    arguments: ['event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
+  culturefeed_udb3.local_event_repository:
+    class: CultuurNet\UDB3\Event\EventRepository
+    arguments: ['@culturefeed_udb3.event_store', '@culturefeed_udb3.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
+  culturefeed_udb3.event_repository.factory:
+    class: Drupal\culturefeed_udb3\EventRepositoryFactory
+    arguments: ['@culturefeed_udb3.local_event_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
+  culturefeed_udb3.event_repository:
+    class: CultuurNet\UDB3\UDB2\EventRepository
+    factory_service: culturefeed_udb3.event_repository.factory
+    factory_method: get
+  culturefeed_udb3.event_command_handler:
+    class: CultuurNet\UDB3\Event\EventCommandHandler
+    arguments: ['@culturefeed_udb3.event_repository', '@culturefeed_udb3.search_service']
+  culturefeed_udb3.logger.command_bus.factory:
+    class: Drupal\culturefeed_udb3\LoggerCommandBusFactory
+    arguments: ['@config.factory', '@logger.channel.culturefeed']
+  culturefeed_udb3.logger.command_bus:
+    class: Monolog\Logger
+    factory_service: culturefeed_udb3.logger.command_bus.factory
+    factory_method: get
+  culturefeed_udb3.event_command_bus:
+    class: CultuurNet\UDB3\CommandHandling\ResqueCommandBus
+    arguments: ['@culturefeed_udb3.main_command_bus', '%command_bus.parameter%', '@culturefeed_udb3.command_bus_event_dispatcher']
+    calls:
+      - [setLogger, ['@culturefeed_udb3.logger.command_bus']]
+      - [subscribe, ['@culturefeed_udb3.event_command_handler']]
+
+  culturefeed_udb3.event.service:
+    class: CultuurNet\UDB3\LocalEventService
+    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.event_repository']
+  culturefeed_udb3.event.tagger:
+    class: CultuurNet\UDB3\Event\DefaultEventTaggerService
+    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
+  culturefeed_udb3.event.editor:
+    class: CultuurNet\UDB3\Event\DefaultEventEditingService
+    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
+
+  culturefeed_udb3.used_keywords_memory_event_store:
+    class: Drupal\culturefeed_udb3\EventStore
+    arguments: ['used_keywords_memory_event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
+  culturefeed_udb3.event.used_keywords_memory_repository:
+    class: CultuurNet\UDB3\UsedKeywordsMemory\UsedKeywordsMemoryRepository
+    arguments: ['@culturefeed_udb3.used_keywords_memory_event_store', '@culturefeed_udb3.event_bus']
+  culturefeed_udb3.event.used_keywords_memory:
+    class: CultuurNet\UDB3\UsedKeywordsMemory\DefaultUsedKeywordsMemoryService
+    arguments: ['@culturefeed_udb3.event.used_keywords_memory_repository']
+
 
   culturefeed_udb3.json_ld_subscriber:
     class: Drupal\culturefeed_udb3\JsonLdSubscriber
