--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -114,7 +114,7 @@ services:
     arguments: ['@url_generator', 'culturefeed_udb3.organizer']
   culturefeed_udb3.organizer.ld_projector:
     class: CultuurNet\UDB3\Organizer\OrganizerLDProjector
-    arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.iri_generator']
+    arguments: ['@culturefeed_udb3.organizer.ld_repository', '@culturefeed_udb3.organizer.iri_generator', '@culturefeed_udb3.read_models_event_bus']
   culturefeed_udb3.organizer.event_bus:
     class: CultuurNet\UDB3\SimpleEventBus
     factory_service: culturefeed_udb3.event_bus_factory
@@ -143,14 +143,14 @@ services:
     arguments: ['event_document_repository', '@entity.manager']
   culturefeed_udb3.eventld_projector:
     class: CultuurNet\UDB3\Event\EventLDProjector
-    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator', '@culturefeed_udb3.place.ld_projector', '@culturefeed_udb3.organizer.ld_projector']
+    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.iri_generator', '@culturefeed_udb3.event.service', '@culturefeed_udb3.place.service', '@culturefeed_udb3.organizer.service']
   culturefeed_udb3.event_bus:
     class: CultuurNet\UDB3\SimpleEventBus
     factory_service: culturefeed_udb3.event_bus_factory
     factory_method: get
     # A list of event bus subscribers that are subscribed to the event bus on first publication.
     # Don't use @ in front of them, these services will be loaded on-demand.
-    arguments: [['culturefeed_udb3.eventld_projector']]
+    arguments: [['culturefeed_udb3.eventld_projector', 'culturefeed_udb3.event_relations_projector']]
   culturefeed_udb3.event_store:
     class: Drupal\culturefeed_udb3\EventStore
     arguments: ['event_store', '@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
@@ -183,7 +183,7 @@ services:
 
   culturefeed_udb3.event.service:
     class: CultuurNet\UDB3\LocalEventService
-    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.event_repository']
+    arguments: ['@culturefeed_udb3.eventld_repository', '@culturefeed_udb3.event_repository', '@culturefeed_udb3.event_relations_repository', '@culturefeed_udb3.iri_generator']
   culturefeed_udb3.event.tagger:
     class: CultuurNet\UDB3\Event\DefaultEventTaggerService
     arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
@@ -211,3 +211,11 @@ services:
     arguments: ['@culturefeed_udb3.event_command_bus', '@culturefeed.current_user', '@culturefeed.user_credentials']
     tags:
       - { name: event_subscriber }
+
+  culturefeed_udb3.event_relations_repository:
+    class: Drupal\culturefeed_udb3\EventRelationsRepository
+    arguments: ['@entity.query', '@database']
+
+  culturefeed_udb3.event_relations_projector:
+    class: CultuurNet\UDB3\Event\ReadModel\Relations\Projector
+    arguments: ['@culturefeed_udb3.event_relations_repository']
