--- a/culturefeed_udb3/config/install/culturefeed_udb3.settings.yml
+++ b/culturefeed_udb3/config/install/culturefeed_udb3.settings.yml
@@ -7,6 +7,7 @@ log:
     file_path: command_bus.log
     socketioemitter_redis_host: 127.0.0.1
     socketioemitter_redis_port: '6379'
+    socketioemitter_redis_key: 'drupal.socket.io'
     hipchat_room: ''
     hipchat_token: ''
     level: DEBUG
