--- a/culturefeed_udb3_app/bower.json
+++ b/culturefeed_udb3_app/bower.json
@@ -5,9 +5,12 @@
     "Bram Cordie <bramcordie@gmail.com>"
   ],
   "dependencies": {
-    "udb3-angular": "cultuurnet/udb3-angular"
+    "udb3-angular": "cultuurnet/udb3-angular#feature/III-139"
   },
   "description": "udb3 Drupal App",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "resolutions": {
+    "angular": "~1.3.0"
+  }
 }
