--- a/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
+++ b/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
@@ -2,7 +2,7 @@ culturefeed_udb3_app.search:
   path: '/udb3/search'
   defaults:
     _title: 'Evenementen zoeken'
-    _content: '\Drupal\culturefeed_udb3_app\Controller\SearchController::search'
+    _controller: '\Drupal\culturefeed_udb3_app\Controller\SearchController::search'
   options:
     _access_mode: 'ANY'
   requirements:
