III-139: Only CultureFeed users should have access to search

--- a/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
+++ b/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
@@ -6,4 +6,4 @@ culturefeed_udb3_app.search:
   options:
     _access_mode: 'ANY'
   requirements:
-    _access: 'TRUE'
+    _culturefeed_current_user: 'TRUE'
