--- a/culturefeed_udb3/composer.json
+++ b/culturefeed_udb3/composer.json
@@ -2,23 +2,9 @@
     "name": "cultuurnet/culturefeed_udb3",
     "description": "Culturefeed UDB3 search platform",
     "license": "GPLv3",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://bitbucket.org/2dotstwice/culudb-php.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://bitbucket.org/2dotstwice/culudb-php-doctrine.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://bitbucket.org/2dotstwice/culudb-php-symfony.git"
-        }
-    ],
     "minimum-stability": "dev",
     "require": {
-        "cultuurnet/udb3": "~0.0@dev",
+        "cultuurnet/udb3": "dev-feature/III-137 as 0.1",
         "cultuurnet/udb3-symfony": "~0.0@dev",
         "monolog/monolog": "~1.11",
         "chrisboulton/php-resque": "~1.2",
