--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -187,9 +187,11 @@ services:
   culturefeed_udb3.event.tagger:
     class: CultuurNet\UDB3\Event\DefaultEventTaggerService
     arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
+  culturefeed_udb3.event.uuidgenerator:
+    class: Broadway\UuidGenerator\Rfc4122\Version4Generator
   culturefeed_udb3.event.editor:
     class: CultuurNet\UDB3\Event\DefaultEventEditingService
-    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus']
+    arguments: ['@culturefeed_udb3.event.service', '@culturefeed_udb3.event_command_bus', '@culturefeed_udb3.event.uuidgenerator', '@culturefeed_udb3.event_repository', '@culturefeed_udb3.place.service']
 
   culturefeed_udb3.used_keywords_memory_event_store:
     class: Drupal\culturefeed_udb3\EventStore
