III-137: Add route where a form will come to create a new event

--- a/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
+++ b/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
@@ -7,3 +7,13 @@ culturefeed_udb3_app.search:
     _access_mode: 'ANY'
   requirements:
     _culturefeed_current_user: 'TRUE'
+
+culturefeed_udb3_app.new_event:
+  path: '/udb3/event/new'
+  defaults:
+    _title: 'Nieuw evenement aanmaken'
+    _controller: '\Drupal\culturefeed_udb3_app\Controller\EventController::newEvent'
+  options:
+    _access_mode: 'ANY'
+  requirements:
+    _culturefeed_current_user: 'TRUE'
