--- a/culturefeed_udb3_app/culturefeed_udb3_app.libraries.yml
+++ b/culturefeed_udb3_app/culturefeed_udb3_app.libraries.yml
@@ -25,3 +25,5 @@ udb3-angular:
     theme:
       bower_components/angular-ui-select/dist/select.css: {}
       bower_components/components-font-awesome/css/font-awesome.css: {}
+  dependencies:
+    - core/drupalSettings
