III-139: Construct URLs with url_generator and unrouted_url_assembler services, introduce a setting and a corresponding settings form for the WebSocket server

--- a/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
+++ b/culturefeed_udb3_app/culturefeed_udb3_app.routing.yml
@@ -1,3 +1,11 @@
+culturefeed_udb3_app.settings:
+  path: '/admin/config/culturefeed/udb3_app'
+  defaults:
+    _form: 'Drupal\culturefeed_udb3_app\Form\SettingsForm'
+    _title: 'Culturefeed udb3 Angular app settings'
+  requirements:
+    _permission: 'administer site configuration'
+
 culturefeed_udb3_app.search:
   path: '/udb3/search'
   defaults:
