III-137: Test include of udb3-angular with bower

--- a/culturefeed_udb3_app/culturefeed_udb3_app.libraries.yml
+++ b/culturefeed_udb3_app/culturefeed_udb3_app.libraries.yml
@@ -16,7 +16,7 @@ udb3-angular:
     bower_components/moment/moment.js: {}
     bower_components/socket.io-client/socket.io.js: {}
     bower_components/accounting/accounting.js: {}
-    udb3-angular.js: {}
+    bower_components/udb3-angular/dist/udb3-angular.js: {}
     angular/app.js: {}
     angular/app.controller.js: {}
     angular/header.controller.js: {}
